--- a/css/geral.css
+++ b/css/geral.css
@@ -29,12 +29,15 @@ body{
 #mainContent{
     margin-left: 200px;
     padding: 80px 55px 35px 70px;
+    position: relative;
 }
 
 /* error messages*/
 .error_box {
-    width: 100%;
+    width: 90%;
     text-align: center;
+    position: absolute;
+    top: 60px;
 }
 .error_msg {
     color: red;
@@ -42,10 +45,10 @@ body{
 }
 /* success messages*/
 .success_box {
-    width: 100%;
+    width: 90%;
     text-align: center;
     position: absolute;
-    top: -35px;
+    top: 35px;
 }
 .success_msg {
     color: green;
@@ -71,7 +74,8 @@ body{
 .data-table {
     width: 100%;
     position: relative;
-    margin-right: 80px;
+    height: 70%;
+    overflow: auto;
 }
 .data-table table {
     width: 100%;
@@ -80,7 +84,13 @@ body{
 }
 .data-table table th {
     font-size: 14px;
+    position: sticky;
+    top: 0;
+    z-index: 1;
+    background-color: white;
+    border-bottom: 2px solid gray;
     padding-bottom: 15px;
+
 }
 .data-table table th.name-column {
     padding-left: 10px;
@@ -98,6 +108,9 @@ body{
     width: 27px;
     height: 27px;
     position: relative;
+}
+.data-table table tr:hover {
+    background-color: #f5f5f5;
 }
 .data-table table .first-column {
     width: 30px;
@@ -198,8 +211,8 @@ body{
     align-content: end;
     justify-content: space-between;
     position: absolute;
-    top: -50px;
-    right: 0px;
+    top: 30px;
+    right: 55px;
 }
 .action-buttons .icon{
     height: 32px;
